Fix dropdown menu caret alignment and vertical spacing issues

--- a/packages/compass-crud/styles/table-view-cell-editor.less
+++ b/packages/compass-crud/styles/table-view-cell-editor.less
@@ -70,6 +70,8 @@
       border-radius: 0;
       font-size: 10px;
       font-family: Menlo;
+      width: 100%;
+      text-align: left;
     }
 
     .closed > .dropdown-menu {
@@ -81,7 +83,8 @@
     }
 
     .caret {
-      margin-left: 20px;
+      float: right;
+      margin-top: 5px;
     }
 
     &-is-edited {
